syntax = "proto3";

package apps.v1;

import "apps/v1/repository/v1/workflow.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/apps/v1/provision";

message ProvisionRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string app_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
}

message ProvisionResponse {
  apps.v1.repository.v1.ProvisionRepositoryResponse repository = 1;
}
